# lowlat-matching-engine

./: .clang-format  BENCHMARKS.md  CMakeLists.txt  README.md  format  perf.data  perf_report.txt
.cache/clangd/index/: bench_fixed_clob.cpp.08CE6367AAE3D219.idx  bench_matching.cpp.8533F8D376D45FED.idx  bench_matching_hot.cpp.0701056243476585.idx  execution.hpp.094FDF282E4475BE.idx  fixed_clob.hpp.C7C81FBBA481E948.idx  market_order.hpp.CBE2B75408BBE7FB.idx  order_index.hpp.86550635CE8FA920.idx  order_pool.hpp.3009FA22EEC820A7.idx  test_fixed_clob.cpp.50357D9C3865A15B.idx  test_matching.cpp.3F63EFB3FF015B30.idx  test_order_index.cpp.25AF7845C54F05EE.idx  test_order_pool.cpp.E04B1EF353D01CE2.idx  types.hpp.74F64B865ED87985.idx
bench/: bench_fixed_clob.cpp  bench_matching.cpp  bench_matching_hot.cpp  bench_order_index.cpp  bench_pipeline.cpp  bench_simd_scan.cpp
src/: execution.hpp  execution_sink.hpp  fixed_clob.hpp  market_order.hpp  order.hpp  order_command.hpp  order_index.hpp  order_pool.hpp  price_level.hpp  simd_scan.hpp  spsc_ring.hpp  spsc_ring_cached.hpp  thread_affinity.hpp  types.hpp  workload.hpp
tests/: test_fixed_clob.cpp  test_matching.cpp  test_order_index.cpp  test_order_pool.cpp  test_simd_scan.cpp  test_spsc_cached.cpp  test_spsc_ring.cpp
tools/: profile_full_match.cpp  profile_full_match_no_exec.cpp  profile_full_match_raw_exec.cpp
